force-app/main/default/objects/Eligibility_Vaccine_Group__c/Eligibility_Vaccine_Group__c.object-meta.xml
<CustomObject>
    <label>Eligibility Vaccine Group</label>
    <nameField>
        <label>Eligibility Vaccine Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Vaccine Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>