force-app/main/default/objects/Eligibility_Vaccine_Group__c/fields/Aggregate_Count__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Count__c</fullName>
    <label>Aggregate Count</label>
    <summaryFilterItems>
        <field>Eligibility_Criteria__c.Field_Name__c</field>
        <operation>equals</operation>
        <value>AGGREGATE</value>
    </summaryFilterItems>
    <summaryForeignKey>Eligibility_Criteria__c.Eligibility_Vaccine_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>