force-app/main/default/objects/Eligibility_Vaccine_Group__c/fields/Custom_Filter_Expression__c.field-meta.xml
<CustomField>
    <fullName>Custom_Filter_Expression__c</fullName>
    <label>Custom Filter Expression</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>