force-app/main/default/objects/Eligibility_Vaccine_Group__c/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <label>Disease</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVID19</fullName>
                <default>true</default>
                <label>COVID19</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>