force-app/main/default/objects/Eligibility_Vaccine_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sequence__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Disease__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>