force-app/main/default/objects/Eligibility_Vaccine_Group__c/listViews/COVID19.listView-meta.xml
<ListView>
    <fullName>COVID19</fullName>
    <columns>Sequence__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Disease__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disease__c</field>
        <operation>equals</operation>
        <value>COVID19</value>
    </filters>
    <label>COVID19</label>
</ListView>